<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hills"
    tools:context=".View.NewNoteActivity">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@android:color/background_light"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="151dp"
            android:layout_height="112dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="23dp"
            app:srcCompat="@drawable/ic_event_note_black_24dp"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:autofillHints="" tools:targetApi="o"/>

        <EditText
            android:id="@+id/descrText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:autofillHints="" tools:targetApi="o"/>
        <EditText
            android:id="@+id/dateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="255dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="DueDate"
            android:inputType="textPersonName"
            android:autofillHints="" tools:targetApi="o"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="12dp"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/delete"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>